# Antiplagiat_System

./: README.md  docker-compose.yml  init_db.sql
analysis_service/: CMakeLists.txt  Dockerfile  main.cpp
gateway_service/: CMakeLists.txt  Dockerfile  main.cpp
postman/: Antiplagiat System.postman_collection.json
postman/files/: test.txt  test2.txt
storage_service/: CMakeLists.txt  Dockerfile  main.cpp
